add and style stop watch elements

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>stopwatch</title>
+    <title>stop watch</title>
 </head>
 <body>
-    
+    <div class="stopwatch">
+        <h1>stop watch</h1>
+        <div><h3>0</h3></div>
+        <button class="start">Start stopwatch</button>
+        <button class="reset">reset</button>
+    </div>
     <script src="dom.js"></script>
 </body>
 </html>
